--- a/views/registration_page.ejs
+++ b/views/registration_page.ejs
@@ -8,7 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Fylo FrontEnd</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="body.css">
     <link rel="stylesheet" type="text/css" href="nav.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
 <body>
@@ -19,20 +22,23 @@
     <div class="grid-item-two">
         <header>
           <nav class="topnav">
-            <img src="logo.svg">
+            <p><img class="image" src="../images/logo.svg" height="auto" width="auto">Fylo</p>
             <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
             <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.gmail.com"><i class="fas fa-envelope-square"></i></a>
           </nav>
         </header>
-        <main>
-          <h3> All your files in one secure </h3>
-          <h3> location, accessible anywhere </h3>
-
-          <div>
-            
+        <main class="main">
+          <h3 class="tagline"> All your files in one secure <br> location, accessible anywhere</h3>
+          <p class="description"> Fylo stores all your most important files in one secure location. <br> Access them wherever you need, share and collaborate with <br> friends, family, and co-workers </p>
+          <div class="sign-up">
+            <input class="form-control" type="text">
+            <input class="form-button" type="submit" placeholder="Sign-Up">
           </div>
         </main>
+        <footer>
+
+        </footer>
     </div>
   </div>
 </body>
