--- a/public/index.css
+++ b/public/index.css
@@ -1,23 +1,42 @@
-.grid-container {
+/* .grid-container {
   display: grid;
   grid-template-columns: 0.5fr 0.8fr;
   background-color: #2196F3;
+  height: 100vh;
   padding: 5px;
-}
+} */
 
 .grid-item-one {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
+  background-image:
+      linear-gradient(
+        to bottom left, 
+        hsl(243, 87%, 12%), hsl(243, 86%, 85%)
+  );
   padding: 20px;
   font-size: 30px;
   text-align: center;
 }
 
 .grid-item-two {
-  background-color: purple;
-  border: 1px solid rgba(0, 0, 0, 0.8);
+  background-color: white;
+  /* border: 1px solid rgba(0, 0, 0, 0.8); */
   padding: 20px;
   font-size: 30px;
   text-align: center;
 }
 
+.grid-container {
+width: 100%;
+background-color: #fff;
+margin: 0;
+display: grid;
+grid-template-columns: 0.6fr 0.8fr;
+grid-template-areas: 
+    "header header"
+    "sidebar main"
+    "footer footer";
+}
+
+nav .p {
+  background: red; 
+}
